# wasm-actions

./: .release-please-manifest.json  CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md  release-please-config.json  renovate.json
.github/workflows/: lint--cargo-lock.yaml  lint--deps.yaml  lint--release-please.yaml  lint--renovate.yaml  lint--rust.yaml  release-please.yaml  shared--cargo-test.yaml  shared--wasm-pack-test.yaml  test--build.yaml  test--core.yaml  test--derive.yaml  test--futures.yaml  test--log.yaml  test--macro.yaml  test--main.yaml  test--node-sys.yaml  test--parse.yaml  test--prelude.yaml
crates/core/: CHANGELOG.md  Cargo.toml
crates/core/src/: crypto.rs  error.rs  fs.rs  io.rs  lib.rs  os.rs  process.rs  promise.rs
crates/derive/: CHANGELOG.md  Cargo.toml
crates/derive/src/: codegen.rs  lib.rs  parse.rs
crates/derive/tests/: example.rs
crates/log/: CHANGELOG.md  Cargo.toml
crates/log/src/: lib.rs
crates/log/tests/: ui.rs
crates/macro/: CHANGELOG.md  Cargo.toml
crates/macro/src/: lib.rs
crates/macro/tests/: ui.rs
crates/macro/ui-tests/pass/: input_var.rs  input_var_underscore.rs
crates/prelude/: CHANGELOG.md  Cargo.toml
crates/prelude/src/: derive.rs  env.rs  lib.rs  testing.rs
crates/prelude/tests/: get_state.rs
crates/wasm-actions/: CHANGELOG.md  Cargo.toml
crates/wasm-actions-build/: CHANGELOG.md  Cargo.toml
crates/wasm-actions-build/src/: action.rs  lib.rs
crates/wasm-actions-build/tests/: generate_recommended.rs
crates/wasm-actions-core/: CHANGELOG.md  Cargo.toml
crates/wasm-actions-core/src/: env.rs  error.rs  fs.rs  io.rs  lib.rs  process.rs  promise.rs
crates/wasm-actions-core/src/fs/: file.rs
crates/wasm-actions-core/src/fs/file/: ops.rs
crates/wasm-actions-derive/: CHANGELOG.md  Cargo.toml
crates/wasm-actions-derive/src/: codegen.rs  lib.rs  parse.rs
crates/wasm-actions-derive/tests/: example.rs
crates/wasm-actions-futures/: CHANGELOG.md  Cargo.toml
crates/wasm-actions-futures/src/: lib.rs
crates/wasm-actions-log/: CHANGELOG.md  Cargo.toml
crates/wasm-actions-log/src/: lib.rs
crates/wasm-actions-log/tests/: ui.rs
crates/wasm-actions-macro/: CHANGELOG.md  Cargo.toml
crates/wasm-actions-macro/src/: lib.rs
crates/wasm-actions-macro/tests/: ui.rs
crates/wasm-actions-macro/ui-tests/pass/: input_var.rs  input_var_underscore.rs
crates/wasm-actions-node-sys/: CHANGELOG.md  Cargo.toml
crates/wasm-actions-node-sys/src/: buffer.rs  child_process.rs  crypto.rs  events.rs  fs.rs  io.rs  lib.rs  microtasks.rs  process.rs  stream.rs  types.rs
crates/wasm-actions-parse/: CHANGELOG.md  Cargo.toml
crates/wasm-actions-parse/src/: lib.rs
crates/wasm-actions-prelude/: CHANGELOG.md  Cargo.toml
crates/wasm-actions-prelude/src/: derive.rs  env.rs  lib.rs  output.rs  testing.rs
crates/wasm-actions-prelude/tests/: get_input.rs  get_state.rs
crates/wasm-actions/src/: lib.rs
src/: console.rs  lib.rs  output.rs
tests/: get_input.rs  get_state.rs
