[workspace]
resolver = "3"
members = [
    "crates/wasm-actions",
    "crates/wasm-actions-build",
    "crates/wasm-actions-core",
    "crates/wasm-actions-derive",
    "crates/wasm-actions-futures",
    "crates/wasm-actions-log",
    "crates/wasm-actions-macro",
    "crates/wasm-actions-node-sys",
    "crates/wasm-actions-parse",
    "crates/wasm-actions-prelude"
]
package.repository = "https://github.com/oakcask/wasm-actions"
package.homepage = "https://github.com/oakcask/wasm-actions"
package.license = "MIT OR Apache-2.0"
package.readme = "README.md"
package.categories = ["wasm"]
package.keywords = ["wasm", "github"]
