[workspace]
resolver = "3"
members = [
    "crates/wasm-actions",
    "crates/wasm-actions-build",
    "crates/wasm-actions-core",
    "crates/wasm-actions-derive",
    "crates/wasm-actions-futures",
    "crates/wasm-actions-log",
    "crates/wasm-actions-macro",
    "crates/wasm-actions-node-sys",
    "crates/wasm-actions-parse",
    "crates/wasm-actions-prelude"
]
package.repository = "https://github.com/oakcask/wasm-actions"
package.homepage = "https://github.com/oakcask/wasm-actions"
package.license = "MIT OR Apache-2.0"
package.readme = "README.md"
package.categories = ["wasm"]
package.keywords = ["wasm", "github"]
package.authors = ["Kuya KOHARA (oakcask) <kuya.kohara@gmail.com>"]

[workspace.dependencies]
cargo_toml = "0.22.3"
js-sys = "0.3.95"
log = "0.4.29"
proc-macro2 = "1.0.106"
quote = "1.0.45"
serde = "1.0.228"
serde_json = "1.0.149"
syn = "2.0.117"
tempfile = "3.27.0"
tokio = { version = "1.52.1", default-features = false }
trybuild = "1.0.116"
wasm-bindgen = "0.2.118"
wasm-bindgen-futures = { version = "0.4.68", default-features = false }
wasm-bindgen-test = "0.3.68"
web-sys = { version = "0.3.95", default-features = false }
yaml-rust = "0.4.5"

wasm-actions = { path = "crates/wasm-actions" }
wasm-actions-core = { path = "crates/wasm-actions-core" }
wasm-actions-derive = { path = "crates/wasm-actions-derive" }
wasm-actions-futures = { path = "crates/wasm-actions-futures" }
wasm-actions-log = { path = "crates/wasm-actions-log" }
wasm-actions-macro = { path = "crates/wasm-actions-macro" }
wasm-actions-node-sys = { path = "crates/wasm-actions-node-sys" }
wasm-actions-parse = { path = "crates/wasm-actions-parse" }
wasm-actions-prelude = { path = "crates/wasm-actions-prelude" }
