[package]
name = "wasm-actions-core"
version = "0.5.0"
edition = "2021"

[lib]
crate-type = ["rlib"]

[features]
default = []
crypto = [
    "web-sys/Crypto"
]

[dependencies]
wasm-bindgen = "0.2.105"
js-sys = { version = "0.3.82" }
wasm-bindgen-futures = "0.4.55"
web-sys = { version = "0.3.82", default-features = false, optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3.55"
