[package]
name = "wasm-actions-derive"
version = "0.5.0"
edition = "2024"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.103"
quote = "1.0.42"
syn = "2.0.110"
wasm-bindgen = { version = "0.2.105", features = ["std"] }
wasm-bindgen-futures = "0.4.55"
wasm-actions-core = { path = "../core" }
wasm-actions-macro = { path = "../macro" }
wasm-actions-prelude = { path = "../prelude", features = ["derive", "testing"] }
serde_json = "1.0.145"

[dev-dependencies]
trybuild = "1.0.114"
wasm-bindgen-test = "0.3.55"
serde = { version = "1.0.228", features = ["derive"] }

