[package]
name = "wasm-actions-log"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["rlib"]

[dependencies]
log = { version = "0.4.27" }
wasm-actions-core = { path = "../core" }

[dev-dependencies]
trybuild = "1.0.114"
wasm-bindgen = "0.2.100"
wasm-bindgen-test = "0.3.50"
js-sys = { version = "0.3" }

[features]
default = ["log/kv", "log/std"]
