[package]
name = "wasm-actions-build"
version = "0.1.5"
edition = "2024"
license.workspace = true
homepage.workspace = true
repository.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true

[lib]
crate-type = ["rlib"]

[dependencies]
yaml-rust = "0.4.5"
syn = { version = "2.0.113", features = ["parsing", "full"] }
serde_json = "1.0.148"
wasm-actions-parse = { path = "../wasm-actions-parse" }
cargo_toml = "0.22.3"

[dev-dependencies]
