[package]
name = "wasm-actions-build"
version = "0.1.7"
edition = "2024"
license.workspace = true
homepage.workspace = true
repository.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true

[lib]
crate-type = ["rlib"]

[dependencies]
yaml-rust = { workspace = true }
syn = { workspace = true, features = ["parsing", "full"] }
serde_json = { workspace = true }
wasm-actions-parse = { workspace = true }
cargo_toml = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
