[package]
name = "wasm-actions-core"
version = "0.9.0"
edition = "2021"

[lib]
crate-type = ["rlib"]

[features]
default = []
crypto = ["wasm-actions-node-sys/crypto"]

[dependencies]
wasm-bindgen = "0.2.106"
js-sys = { version = "0.3.83" }
wasm-actions-node-sys = { path = "../wasm-actions-node-sys", features = ["fs", "process", "io", "os"]}
wasm-actions-futures = { path = "../wasm-actions-futures" }
tokio = { version = "1.48.0", default-features = false, features = ["io-util"]}

[dev-dependencies]
wasm-bindgen-test = "0.3.56"
