[package]
name = "wasm-actions-core"
version = "0.10.2"
edition = "2024"
license.workspace = true
homepage.workspace = true
repository.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true

[lib]
crate-type = ["rlib"]

[features]
default = []
crypto = ["wasm-actions-node-sys/crypto"]

[dependencies]
wasm-bindgen = "0.2.118"
js-sys = { version = "0.3.95" }
wasm-actions-node-sys = { path = "../wasm-actions-node-sys", features = ["fs", "process", "stream", "os"]}
wasm-actions-futures = { path = "../wasm-actions-futures" }
tokio = { version = "1.52.1", default-features = false, features = ["io-util"]}

[dev-dependencies]
wasm-bindgen-test = "0.3.68"
