[package]
name = "wasm-actions-core"
version = "0.11.0"
edition = "2024"
license.workspace = true
homepage.workspace = true
repository.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true

[lib]
crate-type = ["rlib"]

[features]
default = []
crypto = ["wasm-actions-node-sys/crypto"]

[dependencies]
wasm-bindgen = { workspace = true }
js-sys = { workspace = true }
wasm-actions-node-sys = { workspace = true, features = ["fs", "process", "stream", "os"] }
wasm-actions-futures = { workspace = true }
tokio = { workspace = true, features = ["io-util"] }

[dev-dependencies]
wasm-bindgen-test = { workspace = true }
