[package]
name = "wasm-actions-derive"
version = "0.8.0"
edition = "2024"
license.workspace = true
homepage.workspace = true
repository.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.104"
quote = "1.0.42"
syn = "2.0.111"
wasm-bindgen = { version = "0.2.106", features = ["std"] }
wasm-actions-parse = { path = "../wasm-actions-parse", features = ["proc-macro"] }

[dev-dependencies]
wasm-bindgen-test = "0.3.56"
wasm-actions = { path = "../wasm-actions", features = ["derive", "testing"] }
serde = { version = "1.0.228", features = ["derive"]}