[package]
name = "wasm-actions-derive"
version = "0.8.2"
edition = "2024"
license.workspace = true
homepage.workspace = true
repository.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true

[lib]
proc-macro = true

[dependencies]
proc-macro2 = { workspace = true }
quote = { workspace = true }
syn = { workspace = true }
wasm-bindgen = { workspace = true, features = ["std"] }
wasm-actions-parse = { workspace = true, features = ["proc-macro"] }

[dev-dependencies]
wasm-bindgen-test = { workspace = true }
wasm-actions = { workspace = true, features = ["derive", "testing"] }
serde = { workspace = true, features = ["derive"] }
