[package]
name = "wasm-actions-futures"
version = "0.3.0"
edition = "2024"
license.workspace = true
homepage.workspace = true
repository.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true

[lib]
crate-type = ["rlib"]

[features]

[dependencies]
js-sys = { version = "0.3.91" }
wasm-actions-node-sys = { path = "../wasm-actions-node-sys", features = ["microtasks"]}
wasm-bindgen = "0.2.114"
wasm-bindgen-futures = { version = "0.4.64", default-features = false }

[dev-dependencies]
wasm-bindgen-test = "0.3.64"

[package.metadata.cargo-machete]
ignored = ["wasm-bindgen-test"] # used in doc-test
