[package]
name = "wasm-actions-futures"
version = "0.3.2"
edition = "2024"
license.workspace = true
homepage.workspace = true
repository.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true

[lib]
crate-type = ["rlib"]

[features]

[dependencies]
js-sys = { version = "0.3.95" }
wasm-actions-node-sys = { path = "../wasm-actions-node-sys", features = ["microtasks"]}
wasm-bindgen = "0.2.118"
wasm-bindgen-futures = { version = "0.4.68", default-features = false }

[dev-dependencies]
wasm-bindgen-test = "0.3.68"

[package.metadata.cargo-machete]
ignored = ["wasm-bindgen-test"] # used in doc-test
