[package]
name = "wasm-actions-futures"
version = "0.3.2"
edition = "2024"
license.workspace = true
homepage.workspace = true
repository.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true

[lib]
crate-type = ["rlib"]

[features]

[dependencies]
js-sys = { workspace = true }
wasm-actions-node-sys = { workspace = true, features = ["microtasks"] }
wasm-bindgen = { workspace = true }
wasm-bindgen-futures = { workspace = true }

[dev-dependencies]
wasm-bindgen-test = { workspace = true }

[package.metadata.cargo-machete]
ignored = ["wasm-bindgen-test"] # used in doc-test
