[package]
name = "wasm-actions-log"
version = "0.6.0"
edition = "2021"

[lib]
crate-type = ["rlib"]

[dependencies]
log = { version = "0.4.28" }
wasm-actions-core = { path = "../wasm-actions-core" }

[dev-dependencies]
trybuild = "1.0.114"
wasm-bindgen = "0.2.106"
wasm-bindgen-test = "0.3.56"
js-sys = { version = "0.3.83" }

[features]
default = ["log/kv", "log/std"]
