[package]
name = "wasm-actions-log"
version = "0.6.2"
edition = "2021"
license.workspace = true
homepage.workspace = true
repository.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true

[lib]
crate-type = ["rlib"]

[dependencies]
log = { version = "0.4.29" }
wasm-actions-core = { path = "../wasm-actions-core" }

[dev-dependencies]
wasm-bindgen-test = "0.3.56"

[features]
default = ["log/kv", "log/std"]
