[package]
name = "wasm-actions-log"
version = "0.6.4"
edition = "2024"
license.workspace = true
homepage.workspace = true
repository.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true

[lib]
crate-type = ["rlib"]

[dependencies]
log = { workspace = true }
wasm-actions-core = { workspace = true }

[dev-dependencies]
wasm-bindgen-test = { workspace = true }

[features]
default = ["log/kv", "log/std"]
