[package]
name = "wasm-actions-macro"
version = "0.6.1"
edition = "2024"
license.workspace = true
homepage.workspace = true
repository.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true

[lib]
proc-macro = true

[dependencies]
syn = "2.0.112"

[dev-dependencies]
trybuild = "1.0.114"
