[package]
name = "wasm-actions-macro"
version = "0.6.4"
edition = "2024"
license.workspace = true
homepage.workspace = true
repository.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true

[lib]
proc-macro = true

[dependencies]
syn = { workspace = true }

[dev-dependencies]
trybuild = { workspace = true }
