[package]
name = "wasm-actions-node-sys"
version = "0.3.1"
edition = "2024"
license.workspace = true
homepage.workspace = true
repository.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true

[lib]
crate-type = ["rlib"]

[features]
default = []
buffer = []
crypto = ["web-sys/Crypto"]
child_process = ["events", "stream"]
events = []
fs = []
stream = ["buffer"]
microtasks = []
os = []
process = []

[dependencies]
wasm-bindgen = { workspace = true }
js-sys = { workspace = true }
web-sys = { workspace = true, optional = true }

[dev-dependencies]
