[package]
name = "wasm-actions-parse"
version = "0.1.1"
edition = "2024"
license.workspace = true
homepage.workspace = true
repository.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true

[lib]
crate-type = ["rlib"]

[features]
default = []
proc-macro = ["proc-macro2", "quote"]

[dependencies]
syn = "2.0.113"
proc-macro2 = { version = "1.0.105", optional = true}
quote = { version = "1.0.42", optional = true }

[dev-dependencies]
