[package]
name = "wasm-actions-parse"
version = "0.1.2"
edition = "2024"
license.workspace = true
homepage.workspace = true
repository.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true

[lib]
crate-type = ["rlib"]

[features]
default = []
proc-macro = ["proc-macro2", "quote"]

[dependencies]
syn = "2.0.114"
proc-macro2 = { version = "1.0.106", optional = true}
quote = { version = "1.0.44", optional = true }

[dev-dependencies]
