[package]
name = "wasm-actions-parse"
version = "0.1.3"
edition = "2024"
license.workspace = true
homepage.workspace = true
repository.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true

[lib]
crate-type = ["rlib"]

[features]
default = []
proc-macro = ["proc-macro2", "quote"]

[dependencies]
syn = { workspace = true }
proc-macro2 = { workspace = true, optional = true }
quote = { workspace = true, optional = true }

[dev-dependencies]
