[package]
name = "wasm-actions-prelude"
version = "0.8.0"
edition = "2021"
license.workspace = true
homepage.workspace = true
repository.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true

[lib]
crate-type = ["rlib"]

[features]
derive = []
testing = ["wasm-actions-core/crypto"]

[dependencies]
wasm-actions-core = { path = "../wasm-actions-core" }
wasm-actions-log = { path = "../wasm-actions-log" }
wasm-actions-macro = { path = "../wasm-actions-macro" }

[dev-dependencies]
wasm-bindgen-test = "0.3.56"
