[package]
name = "wasm-actions-prelude"
version = "0.8.3"
edition = "2024"
license.workspace = true
homepage.workspace = true
repository.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true

[lib]
crate-type = ["rlib"]

[features]
derive = []
testing = ["wasm-actions-core/crypto"]

[dependencies]
wasm-actions-core = { workspace = true }
wasm-actions-futures = { workspace = true }
wasm-actions-log = { workspace = true }
wasm-actions-macro = { workspace = true }

[dev-dependencies]
wasm-bindgen-test = { workspace = true }
