[package]
name = "wasm-actions"
version = "0.7.0"
edition = "2024"
license.workspace = true
homepage.workspace = true
repository.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true

[lib]
crate-type = ["rlib"]

[features]
default = ["derive"]
testing = ["wasm-actions-prelude/testing"]
derive = ["wasm-actions-prelude/derive", "wasm-actions-derive", "wasm-bindgen", "serde/derive", "serde_json"]

[dependencies]
wasm-bindgen = { version = "0.2.106", optional = true }
wasm-actions-derive = { path = "../wasm-actions-derive", optional = true }
wasm-actions-prelude = { path = "../wasm-actions-prelude" }
wasm-actions-futures = { path = "../wasm-actions-futures" }
serde_json = { version = "1.0.145", optional = true }

[dev-dependencies]
