[package]
name = "wasm-actions"
version = "0.7.2"
edition = "2024"
license.workspace = true
homepage.workspace = true
repository.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true

[lib]
crate-type = ["rlib"]

[features]
default = ["derive"]
testing = ["wasm-actions-prelude/testing"]
derive = ["wasm-actions-prelude/derive", "wasm-actions-derive", "wasm-bindgen", "serde_json"]

[dependencies]
wasm-bindgen = { workspace = true, optional = true }
wasm-actions-derive = { workspace = true, optional = true }
wasm-actions-prelude = { workspace = true }
wasm-actions-futures = { workspace = true }
serde_json = { workspace = true, optional = true }

[dev-dependencies]
